[package]
name = "woodpile"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.28"
raffle = "0.0.1"
tempfile = "3"
# https://users.rust-lang.org/t/the-state-of-time-in-rust-leaps-and-bounds/107620
# we only need UTC, and don't really care what happens with leap seconds.
time = "0.3"

[dev-dependencies]
test_dir = "0.2"
time = { version = "0.3", features = ["macros"]}
